--- a/.github/workflows/buildanddeployonrequest.yaml
+++ b/.github/workflows/buildanddeployonrequest.yaml
@@ -33,10 +33,8 @@ jobs:
         echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
         chmod 600 ~/.ssh/id_rsa
 
-        scp -o StrictHostKeyChecking=no ./$APP_NAME $REMOTE_USER@$REMOTE_HOST:$REMOTE_PATH/$APP_NAME.new
-        ls
-        ls assets/
-        scp -r -o StrictHostKeyChecking=no assets/swagger $REMOTE_USER@$REMOTE_HOST:$REMOTE_PATH/assets/swagger
+        #scp -o StrictHostKeyChecking=no ./$APP_NAME $REMOTE_USER@$REMOTE_HOST:$REMOTE_PATH/$APP_NAME.new
+        #scp -r -o StrictHostKeyChecking=no assets/swagger $REMOTE_USER@$REMOTE_HOST:$REMOTE_PATH/assets/swagger
 
     - name: Restart service on remote server
       run: |
